@@ -101,6 +101,12 @@ jar {
     baseName 'corda-node-api'
 }
 
+test {
+    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED', '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.security=ALL-UNNAMED'
+}
+
 publish {
     name jar.baseName
 }
