@@ -29,7 +29,13 @@ dependencies {
 
     testImplementation "org.assertj:assertj-core:$assertj_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testImplementation "org.apache.commons:commons-lang3:3.9"
+    testImplementation "org.apache.commons:commons-lang3:$commons_lang3_version"
+}
+
+test {
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.net=ALL-UNNAMED'
 }
 
 configurations {
